# scout-metrics

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-package-name.md  0002-decouple-worker-results-from-source-files.md
docs/plan/: implementation-from-scratch.md
docs/spec/: scout-TECH-SPEC.md
src/scout/: __init__.py  __main__.py  aggregator.py  cli.py  config.py  discovery.py  errors.py  output.py  runner.py
src/scout/metrics/: __init__.py  base.py  cbo.py  cc.py  cognitive.py  duplication.py  halstead.py  lcom.py  loc.py  mi.py
src/scout/parsers/: __init__.py  base.py  js_parser.py  python_parser.py  ts_parser.py
tests/: conftest.py  test_config.py  test_discovery.py  test_errors.py  test_exit_codes.py  test_integration.py  test_js_parser.py  test_metrics.py  test_parsers.py  test_perf_smoke.py  test_runner.py  test_ts_parser.py
tests/fixtures/golden/: js_sample.json  py_sample.json  ts_sample.json
tests/fixtures/repos/dup_sample/: module_a.py  module_b.py
tests/fixtures/repos/js_sample/: calculator.js  utils.js
tests/fixtures/repos/perf_sample_py/: module_00.py  module_01.py  module_02.py  module_03.py  module_04.py  module_05.py  module_06.py  module_07.py  module_08.py  module_09.py  module_10.py  module_11.py  module_12.py  module_13.py  module_14.py  module_15.py  module_16.py  module_17.py  module_18.py  module_19.py  module_20.py  module_21.py
tests/fixtures/repos/py_sample/: calculator.py  complex_module.py  utils.py
tests/fixtures/repos/ts_sample/: types.ts  user_service.ts
